<resources>
    <string name="app_name" translatable="false">Explorer</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="action_main_service" translatable="false">MAIN_SERVICE</string>

    <string name="file_list_item_parent_folder">Parent Folder</string>

    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>

    <string name="drawer_title_storage">storage volume</string>
    <string name="drawer_title_options" translatable="false">options</string>

    <string name="drawer_menu_settings">settings</string>

    <string name="storage_label_main">Internal Storage</string>
    <string name="storage_label_sdcard">SD Card</string>
    <string name="storage_label_usb">USB Drive</string>

    <string name="loremipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ligula sapien, fermentum vitae aliquam sed, lacinia in nibh. Pellentesque euismod diam eget justo interdum, sit amet elementum ipsum vulputate.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_adb_wifi">ADB Wifi</string>
    <string name="title_activity_ftp_server">FTP Server</string>

    <string name="permission_request_message_main">You must grant the permission of reading file system to use this app.</string>
    <string name="permission_request_message_network">You must grant the permission of accessing network state to use this feature.</string>

    <string name="menu_item_sort_order">Sort Order</string>
    <string name="menu_item_cut">Cut</string>
    <string name="menu_item_copy">Copy</string>
    <string name="menu_item_paste">Paste</string>
    <string name="menu_item_rename">Rename</string>
    <string name="menu_item_select_all">Select All</string>
    <string name="menu_item_compress">Compress</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_deselect_all">Deselect All</string>

    <string name="message_delete_confirm">delete selected %d file(s) ?</string>
    <string name="message_rename_success">rename success</string>
    <string name="message_rename_fail">rename_failed</string>
    <string name="message_share">share</string>
    <string name="message_new_file">create new file</string>
    <string name="message_create_file_success">created new file</string>
    <string name="message_create_file_fail">failed to create new file</string>
    <string name="message_file_already_exists">file already exists</string>
    <string name="message_delete">delete</string>
    <string name="message_paste_confilct">target file already exists</string>
    <string name="message_sort_method">sort method</string>
    <string name="message_source_file">source file</string>
    <string name="message_existing_file">existing file</string>
    <string name="choose_file_to_keep">choose file to keep</string>
    <string name="override">override</string>
    <string name="override_for_all">override for all</string>
    <string name="cancel">cancel</string>
    <string name="delete">delete</string>
    <string name="create">create</string>
    <string name="rename">rename</string>
    <string name="error">error</string>
    <string name="message_original_file_name">original file name</string>
    <string name="message_new_file_name">new file name</string>
    <string name="message_sort_by_name">sort by name</string>
    <string name="message_sort_by_size">sort by size</string>
    <string name="message_sort_by_last_modified">sort by last modified time</string>
    <string name="message_press_again_to_exit">Press back once again to exit</string>
    
    <string name="message_ftp_fail">failed to create FTP server</string>
    <string name="message_ftp_stopped">FTP server stopped</string>
    <string name="message_ftp_started">FTP server running\n input ftp://%s:2221 to manage files</string>
    <string name="message_adb_started" formatted="false" >adbd listens on port %d\n\nexecute "adb connect %s:%d" in terminal to connect</string>
    <string name="message_adb_stopped">adbd not listening</string>

    <string name="message_wlan_not_connected">WLAN not connected</string>
    <string name="message_start_ftp">start FTP server</string>
    <string name="message_stop_ftp">stop FTP server</string>
    <string name="message_start_adb">start ADB Wifi</string>
    <string name="message_stop_adb">stop ADB Wifi</string>

    <string name="message_deleted_files">deleted %d file(s)</string>
    <string name="message_pasted_files">pasted %d file(s)</string>

    <string name="compress_error">error while compressing</string>
    <string name="compress_finish">compress finish</string>
    <string name="message_compress_finish">would you like to view compressed file?</string>
    <string name="title_activity_file_property" translatable="false">FilePropertyActivity</string>
</resources>
