<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/message_original_file_name"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:id="@+id/editText1"
        android:editable="false"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/message_new_file_name"
        android:id="@+id/textView6" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:id="@+id/editText2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="right">

        <com.gc.materialdesign.views.ButtonFlat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:background="@color/colorPrimary"
            android:id="@+id/btnRename" />

        <com.gc.materialdesign.views.ButtonFlat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:background="@color/colorAccent"
            android:id="@+id/btnCancel" />
    </LinearLayout>
</LinearLayout>